[package]
name = "tokio-ddmw"
version = "0.9.1"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "tokio", "ddmw" ]
repository = "https://github.com/openqrnch/tokio-ddmw"
description = "Utility library for integrating clients against DDMW."

[dependencies]
blather = { version = "0.7" }
bytes = { version = "1" }
ddmw-types = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tokio-util = { version= "0.6" }

